test-data/invalid/param-no-name.jsx
const Test = () => (
    <Translate>
        <Param />
    </Translate>
);
